[package]
name = "jenkins_trig"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
